Upgrade masterthermconnect rc2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,10 @@
         "debug-test"
       ],
       "console": "integratedTerminal",
-      "justMyCode": true
+      "justMyCode": true,
+      "env": {
+        "PYTEST_ADDOPTS": "--no-cov"
+      }
     },
     {
       // Example of attaching to local debug server
