--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,24 @@
+[coverage:run]
+source =
+  custom_components/mastertherm
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    raise NotImplemented()
+    if __name__ == '__main__':
+    main()
+show_missing = true
+
+[tool:pytest]
+asyncio_mode=auto
+minversion = 6.0
+testpaths = tests
+# nonrecursedirs = .git
+addopts =
+    --strict-markers
+    --cov=custom_components/masterther,
+
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
 doctests = True
