--- a/setup.cfg
+++ b/setup.cfg
@@ -54,3 +54,16 @@ sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 default_section = THIRDPARTY
 known_first_party = custom_components.mastertherm, tests
 combine_as_imports = true
+
+
+[bumpver]
+current_version = "0.0.1"
+version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
+commit_message = "bump version {old_version} -> {new_version}"
+commit = True
+tag = True
+push = True
+
+[bumpver:file_patterns]
+setup.cfg = current_version = "{version}"
+custom_components/mastertherm/manifest.json = "version": "{pep440_version}"
