--- a/custom_components/mastertherm/manifest.json
+++ b/custom_components/mastertherm/manifest.json
@@ -10,6 +10,7 @@
     "@shedc"
   ],
   "requirements": [
-    "masterthermconnect>=1.1.0,<1.2.0"
+    "natsort>=8.0.0",
+    "masterthermconnect==1.2.0b1"
   ]
 }
