--- a/custom_components/mastertherm/manifest.json
+++ b/custom_components/mastertherm/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/shedc/homeassistant-mastertherm",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/shedc/homeassistant-mastertherm/issues",
-  "version": "0.1.1",
+  "version": "0.2.0b0",
   "config_flow": true,
   "codeowners": [
     "@shedc"
