--- a/setup.cfg
+++ b/setup.cfg
@@ -57,7 +57,7 @@ combine_as_imports = true
 
 
 [bumpver]
-current_version = "0.2.0-b2"
+current_version = "0.2.0"
 version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
 commit_message = "bump version {old_version} -> {new_version}"
 commit = True
