--- a/custom_components/mastertherm/manifest.json
+++ b/custom_components/mastertherm/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/shedc/homeassistant-mastertherm",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/shedc/homeassistant-mastertherm/issues",
-  "version": "1.0.0",
+  "version": "1.1.0b0",
   "config_flow": true,
   "codeowners": [
     "@shedc"
