--- a/custom_components/mastertherm/manifest.json
+++ b/custom_components/mastertherm/manifest.json
@@ -1,15 +1,15 @@
 {
   "domain": "mastertherm",
   "name": "Mastertherm",
-  "documentation": "https://github.com/shedc/homeassistant-mastertherm",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/shedc/homeassistant-mastertherm/issues",
-  "version": "1.1.0b1",
-  "config_flow": true,
   "codeowners": [
     "@shedc"
   ],
+  "config_flow": true,
+  "documentation": "https://github.com/shedc/homeassistant-mastertherm",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/shedc/homeassistant-mastertherm/issues",
   "requirements": [
     "masterthermconnect==2.1.0b1"
-  ]
+  ],
+  "version": "1.1.0b1"
 }
