--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -2,22 +2,32 @@ name: Pull actions
 
 on:
   pull_request:
+    branches:
+      - main
+      - nextrelease
 
 jobs:
-  validate:
+  hassfest: # https://developers.home-assistant.io/blog/2020/04/16/hassfest
+    name: "Hassfest Validation"
     runs-on: "ubuntu-latest"
-    name: Validate
     steps:
-        - uses: "actions/checkout@v2"
+        - name: "Checkout the repository"
+          uses: "actions/checkout@v3.3.0"
 
-        - name: HACS validation
+        - name: "Run hassfest validation"
+          uses: "home-assistant/actions/hassfest@master"
+
+  hacs: # https://github.com/hacs/action
+    name: "HACS Validation"
+    runs-on: "ubuntu-latest"
+    steps:
+        - name: "Checkout the repository"
+          uses: "actions/checkout@v3.3.0"
+
+        - name: "Run HACS validation"
           uses: "hacs/action@main"
           with:
             category: "integration"
-            ignore: brands
-
-        - name: Hassfest validation
-          uses: "home-assistant/actions/hassfest@master"
 
   style:
     runs-on: "ubuntu-latest"
