Add version no and Additional Info to Device Info Fixes #75

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,3 +67,4 @@ push = True
 [bumpver:file_patterns]
 setup.cfg = current_version = "{version}"
 custom_components/mastertherm/manifest.json = "version": "{pep440_version}"
+custom_components/mastertherm/const.py = VERSION = "{version}"
