--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install requirements
-        run: python3 -m pip install -r requirements_test.txt
+        run: python3 -m pip install -r requirements_dev.txt
       - name: Run tests
         run: |
           pytest \
