--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -63,10 +63,9 @@ jobs:
             --durations=10 \
             -n auto \
             --cov custom_components.mastertherm \
+            --cov-report=xml \
             -o console_output_style=count \
             -p no:sugar \
             tests
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: ./coverage.xml
+        - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v3
