Update MT Controller 2.2.1, Removed Docker Rust

--- a/.devcontainer-template.json
+++ b/.devcontainer-template.json
@@ -42,11 +42,8 @@
     },
     "remoteUser": "vscode",
     "containerUser": "vscode",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/${localWorkspaceFolderBasename},type=bind,Z",
     //"runArgs": [
     //    "--userns=keep-id"
     //],
-    "features": {
-        "rust": "latest"
-    }
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/${localWorkspaceFolderBasename},type=bind,Z"
 }
