--- a/configuration-template.yaml
+++ b/configuration-template.yaml
@@ -3,6 +3,7 @@ default_config:
 
 # https://www.home-assistant.io/integrations/logger/
 logger:
-  default: info
+  default: warning
   logs:
     custom_components.mastertherm: debug
+    masterthermconnect: debug
