Add Coverage Report when running tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,8 @@ testpaths = tests
 # nonrecursedirs = .git
 addopts =
     --strict-markers
-    --cov=custom_components/mastertherm,
+    --cov=custom_components/mastertherm
+    --cov-report xml
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
