--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ combine_as_imports = true
 
 
 [bumpver]
-current_version = "1.1.7-b1"
+current_version = "1.1.7"
 version_pattern = "MAJOR.MINOR.PATCH[-PYTAGNUM]"
 commit_message = "bump version {old_version} -> {new_version}"
 commit = True
