--- a/custom_components/mastertherm/manifest.json
+++ b/custom_components/mastertherm/manifest.json
@@ -9,7 +9,7 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/shedc/homeassistant-mastertherm/issues",
   "requirements": [
-    "masterthermconnect==2.2.10"
+    "masterthermconnect==2.2.11b1"
   ],
   "version": "1.1.10"
 }
