Problem with Home Assistant 2023. Fixes #174

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,4 +4,4 @@ colorlog==6.8.2
 ruff==0.2.1
 chardet==5.2.0
 pytest-homeassistant-custom-component==0.13.98
-masterthermconnect==2.2.11b1
+masterthermconnect==2.2.11
