Update to Python 3.12

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,11 +2,9 @@ name: "Lint"
 
 on:
   push:
-    branches:
-      - "main"
+    branches: [ "main", "nextrelease" ]
   pull_request:
-    branches:
-      - "main"
+    branches: [ "main" ]
 
 jobs:
   ruff:
@@ -19,7 +17,7 @@ jobs:
         - name: "Set up Python"
           uses: actions/setup-python@v5
           with:
-            python-version: "3.11"
+            python-version: "3.12"
             cache: "pip"
 
         - name: "Install requirements"
