--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -5,11 +5,9 @@ on:
   schedule:
     - cron:  "0 0 * * *"
   push:
-    branches:
-      - "main"
+    branches: [ "main", "nextrelease" ]
   pull_request:
-    branches:
-      - "main"
+    branches: [ "main" ]
 
 jobs:
   hassfest: # https://developers.home-assistant.io/blog/2020/04/16/hassfest
@@ -41,7 +39,7 @@ jobs:
         - uses: "actions/checkout@v4"
         - uses: "actions/setup-python@v5"
           with:
-            python-version: "3.11"
+            python-version: "3.12"
         - run: python3 -m pip install black
         - run: black .
 
@@ -54,7 +52,7 @@ jobs:
       - name: Setup Python
         uses: "actions/setup-python@v5"
         with:
-          python-version: "3.11"
+          python-version: "3.12"
       - name: Install requirements
         run: python3 -m pip install -r requirements_dev.txt
       - name: Run tests
