--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip>=21.0,<23.4
+pip>=21.3.1
 bumpver==2023.1129
 colorlog==6.8.2
 ruff==0.2.1
 chardet==5.2.0
-homeassistant==2023.12.4
+homeassistant==2024.2.0
