--- a/.devcontainer-template.json
+++ b/.devcontainer-template.json
@@ -4,11 +4,12 @@
 
     Change BUILD_TYPE to "dev" to use pytests and develop and "run" to use homeassistant
 
-    NOTE: Python 3.12 does not stop at breakpoints for debugging in VS Code.
+    NOTE: Works with 3.12, but if debugging use 3.11.
+          Python 3.12 is not stopping on breakpoints
 */
 {
     "name": "sHedC/homeassistant-mastertherm",
-    "image": "mcr.microsoft.com/vscode/devcontainers/python:1-3.11",
+    "image": "mcr.microsoft.com/vscode/devcontainers/python:1-3.12",
     "postCreateCommand": "scripts/setup",
     "forwardPorts": [
         8123
