Update to Latest

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
       "justMyCode": true,
       "connect": {
         "host": "localhost",
-        "port": 5678
+        "port": 5678,
       },
       "pathMappings": [
         {
@@ -40,14 +40,14 @@
       "justMyCode": true,
       "connect": {
         "host": "homeassistant.local",
-        "port": 5678
+        "port": 5678,
       },
       "pathMappings": [
         {
           "localRoot": "${workspaceFolder}",
           "remoteRoot": "/usr/src/homeassistant"
         }
-      ]
+      ],
     }
   ]
 }
