Fixing Tests Pt1

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,7 @@
-pip>=21.0,<24.3
-bumpver==2023.1129
-colorlog==6.8.2
-ruff==0.6.3
+pip>=21.3.1
+bumpver==2024.1130
+colorlog==6.9.0
+ruff==0.11.13
 chardet==5.2.0
-pytest-homeassistant-custom-component==0.13.128
+pytest-homeassistant-custom-component==0.13.233
 masterthermconnect==2.3.0
