--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-pip>=21.0,<24.3
-numpy==2.1.0
-bumpver==2023.1129
-colorlog==6.8.2
-ruff==0.6.3
+colorlog==6.9.0
+homeassistant==2025.4.0
+pip>=21.3.1
+numpy==2.2.2
+bumpver>=2024.1130
+ruff==0.11.13
 chardet==5.2.0
-homeassistant==2024.2.4
+debugpy==1.8.14
+zlib_ng==0.5.1
+isal==1.7.2
