--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,5 +3,6 @@ bumpver==2024.1130
 colorlog==6.9.0
 ruff==0.11.13
 chardet==5.2.0
+ical==9.1.0
 pytest-homeassistant-custom-component==0.13.233
 masterthermconnect==2.3.0
