--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,8 +3,7 @@ name: "Lint"
 on:
   push:
     branches: [ "main", "nextrelease" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
 
 jobs:
   ruff:
@@ -12,10 +11,10 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
-          uses: "actions/checkout@v4"
+          uses: "actions/checkout@v4.1.2"
 
         - name: "Set up Python"
-          uses: actions/setup-python@v5
+          uses: actions/setup-python@v5.1.0
           with:
             python-version: "3.13"
             cache: "pip"
