--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,61 +2,33 @@ name: "Release"
 
 on:
   release:
-    types: [released]
+    types: [published]
+
+permissions: {}
 
 jobs:
-  hassfest: # https://developers.home-assistant.io/blog/2020/04/16/hassfest
-    name: "Hassfest Validation"
+  release:
+    name: "Release"
     runs-on: "ubuntu-latest"
+    permissions:
+      contents: write
     steps:
-        - name: "Checkout the repository"
-          uses: "actions/checkout@v4"
+      - name: "Checkout the repository"
+        uses: "actions/checkout@v4.1.2"
 
-        - name: "Run hassfest validation"
-          uses: "home-assistant/actions/hassfest@master"
-
-  hacs: # https://github.com/hacs/action
-    name: "HACS Validation"
-    runs-on: "ubuntu-latest"
-    steps:
-        - name: "Checkout the repository"
-          uses: "actions/checkout@v4"
-
-        - name: "Run HACS validation"
-          uses: "hacs/action@main"
-          with:
-            category: "integration"
-
-  style:
-    runs-on: "ubuntu-latest"
-    name: Check style formatting
-    steps:
-        - uses: "actions/checkout@v4"
-        - uses: "actions/setup-python@v5"
-          with:
-            python-version: "3.13"
-        - run: python3 -m pip install black
-        - run: black .
-
-  tests:
-    runs-on: "ubuntu-latest"
-    name: Run tests
-    steps:
-      - name: Check out code from GitHub
-        uses: "actions/checkout@v4"
-      - name: Setup Python
-        uses: "actions/setup-python@v5"
-        with:
-          python-version: "3.13"
-      - name: Install requirements
-        run: python3 -m pip install -r requirements_dev.txt
-      - name: Run tests
+      - name: "Adjust version number"
+        shell: "bash"
         run: |
-          pytest \
-            -qq \
-            --timeout=9 \
-            --durations=10 \
-            -n auto \
-            -o console_output_style=count \
-            -p no:sugar \
-            tests
+          yq -i -o json '.version="${{ github.event.release.tag_name }}"' \
+            "${{ github.workspace }}/custom_components/mastertherm/manifest.json"
+
+      - name: "ZIP the integration directory"
+        shell: "bash"
+        run: |
+          cd "${{ github.workspace }}/custom_components/mastertherm"
+          zip mastertherm.zip -r ./
+
+      - name: "Upload the ZIP file to the release"
+        uses: softprops/action-gh-release@v2.2.2
+        with:
+          files: ${{ github.workspace }}/custom_components/mastertherm/mastertherm.zip
