--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,8 +6,7 @@ on:
     - cron:  "0 0 * * *"
   push:
     branches: [ "main", "nextrelease" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_call:
 
 jobs:
   hassfest: # https://developers.home-assistant.io/blog/2020/04/16/hassfest
@@ -15,7 +14,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
-          uses: "actions/checkout@v4"
+          uses: "actions/checkout@v4.1.2"
 
         - name: "Run hassfest validation"
           uses: "home-assistant/actions/hassfest@master"
@@ -25,36 +24,27 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
-          uses: "actions/checkout@v4"
+          uses: "actions/checkout@v4.1.2"
 
         - name: "Run HACS validation"
           uses: "hacs/action@main"
           with:
             category: "integration"
 
-  style:
-    runs-on: "ubuntu-latest"
-    name: Check style formatting
-    steps:
-        - uses: "actions/checkout@v4"
-        - uses: "actions/setup-python@v5"
-          with:
-            python-version: "3.13"
-        - run: python3 -m pip install black
-        - run: black .
-
   tests:
     runs-on: "ubuntu-latest"
     name: Run tests
     steps:
       - name: Check out code from GitHub
-        uses: "actions/checkout@v4"
+        uses: "actions/checkout@v4.1.2"
       - name: Setup Python
-        uses: "actions/setup-python@v5"
+        uses: "actions/setup-python@v5.1.0"
         with:
           python-version: "3.13"
+
       - name: Install requirements
         run: python3 -m pip install -r requirements_dev.txt
+
       - name: Run tests
         run: |
           pytest \
@@ -68,4 +58,5 @@ jobs:
             -p no:sugar \
             tests
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
+        uses: codecov/codecov-action@v5.4.3
+
