Fix CodeCov token

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -59,4 +59,6 @@ jobs:
             tests
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5.4.3
-
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: sHedC/homeassistant-mastertherm
