--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 colorlog==6.9.0
-homeassistant==2025.4.0
+homeassistant==2025.7.0
 pip>=21.3.1
 numpy==2.2.2
 bumpver>=2024.1130
@@ -8,3 +8,7 @@ chardet==5.2.0
 debugpy==1.8.14
 zlib_ng==0.5.1
 isal==1.7.2
+mutagen==1.47.0
+pipeline==0.1.0
+pymicro_vad==1.0.2
+pyspeex_noise==1.0.2
