Update to HA 2025.10.2

--- a/configuration-template.yaml
+++ b/configuration-template.yaml
@@ -1,5 +1,18 @@
 # https://www.home-assistant.io/integrations/default_config/
-default_config:
+# default_config:
+
+# Add needed setup for the integraiton,
+assist_pipeline:
+cloud:
+config:
+conversation:
+homeassistant_alerts:
+logbook:
+stream:
+webhook:
+
+# comment out history to test if missing, water events disabled.
+history:
 
 # Enable to initiate debugging in Home Assistant Runtime
 debugpy:
