--- a/.devcontainer-template.json
+++ b/.devcontainer-template.json
@@ -48,7 +48,8 @@
                 "editor.formatOnSave": true,
                 "editor.formatOnType": true,
                 "extensions.ignoreRecommendations": true,
-                "files.trimTrailingWhitespace": true
+                "files.trimTrailingWhitespace": true,
+                "remote.autoForwardPorts": false
             }
         }
     },
