Fix Numbers in Circuit Names

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,8 @@
 pip>=21.3.1
 bumpver==2025.1131
 colorlog==6.10.1
-ruff==0.14.1
+ruff==0.14.8
 chardet==5.2.0
-pytest-homeassistant-custom-component==0.13.288
-masterthermconnect==2.3.0
+pycares==4.9.0 # Fix for missing ares_query_a_result.
+pytest-homeassistant-custom-component==0.13.300
+masterthermconnect==2.3.1
