--- a/.devcontainer-template.json
+++ b/.devcontainer-template.json
@@ -6,7 +6,7 @@
 */
 {
     "name": "sHedC/homeassistant-mastertherm",
-    "image": "mcr.microsoft.com/vscode/devcontainers/python:1-3.13",
+    "image": "mcr.microsoft.com/devcontainers/python:3.13",
     "postCreateCommand": "scripts/setup",
     "forwardPorts": [
         8123
